tests/data/jwt-auth-mergeable/mergeable/jwt-auth-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jwt-auth-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
    nginx.com/jwt-key: "jwt-master-jwk"
    nginx.com/jwt-realm: "JWT Auth Mergeable App"
    nginx.com/jwt-token: "$cookie_auth_token"
    nginx.com/jwt-login-url: "https://login.jwt-auth-mergeable.example.com"
spec:
  rules:
  - host: jwt-auth-mergeable.example.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jwt-auth-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.com/jwt-key: "jwt-minion-jwk"
    nginx.com/jwt-realm: "Backend1"
    nginx.com/jwt-token: "$cookie_auth_token"
    nginx.com/jwt-login-url: "https://login-backend1.jwt-auth-mergeable.example.com"
spec:
  rules:
  - host: jwt-auth-mergeable.example.com
    http:
      paths:
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jwt-auth-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: jwt-auth-mergeable.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
